Started on LoginService

--- a/LoginService/appsettings.json
+++ b/LoginService/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1480; TrustServerCertificate=True; Database=Login; User=User1; Password=Passw0rd!"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
